Finished LITEC Page, Added New Jan18 Resume & More

--- a/CSS/footer_dark.css
+++ b/CSS/footer_dark.css
@@ -54,6 +54,7 @@
 /*h4 must be a direct descendant of footer */
 #standalone_footer{
     font-family: Roboto;
+    font-size: 17px;
 }
 
 #footer_container{
