--- a/Sass/litec_styles.scss
+++ b/Sass/litec_styles.scss
@@ -124,10 +124,11 @@ h1{
   h3{
     font-family: RobotoReg,serif;
   }
-  p{
-    font-family: Helvetica,serif;
-    font-size: 23px;
-  }
+}
+
+p{
+  font-family: Helvetica,serif;
+  font-size: 23px;
 }
 
 h3{
@@ -162,12 +163,8 @@ h3{
       color: white;
       text-decoration: underline;
     }
-    &:link{
-      color: white;
-    }
-    &:hover{
-      color: orange;
-    }
+    &:link{  color: white;  }
+    &:hover{  color: orange;  }
   }
   h1{
     font-family: RobotoReg, serif;
@@ -248,15 +245,45 @@ h4{
   font-size: 25px;
 }
 
-#content1{
-  padding: 5% 0;
-  background-color: black;
-  h1{
-    text-align: center;
-    font-family: Roboto;
-    color: white;
-    font-size: 30px;
+#smart-car-contents{
+  @include background-prop;
+  background-position: center center;
+  background-image: url("../Images/litec/litecContent.jpg");
+  padding: 3% 0 9% 0;
+  background-color: rgb(220,210,184);
+  #text{
+    width: 40%;
+    margin-left: 50%;
   }
+}
+
+#gondola-intro{
+  @include background-prop;
+  text-align: center;
+  color: white;
+  background-color: rgb(208,218,207);
+  padding: 4% 10% 48% 10%;
+  background-image: url("../Images/litec/gondola1.jpg");
+}
+
+#gondola{
+  @include background-prop;
+  background-position: center center;
+  background-image: url("../Images/litec/gondola2.jpg");
+  padding: 7% 0 12% 0;
+  background-color: rgb(227,222,203);
+  #text-gondola{
+    width: 40%;
+    margin-left: 50%;
+  }
+}
+
+#gondola a{
+  &:link, &:visited{
+    color: black;
+    text-decoration: underline;
+  }
+  &:hover{  color: orange;  }
 }
 
 @media only screen and (min-width: 1530px){
@@ -283,6 +310,14 @@ h4{
   }
 }
 
+@media only screen and (max-width: 1294px){
+  #smart-car-contents{
+    background-position-y: -100px;
+    #text{  width: 45%;  }
+    padding: 2% 0 2% 0;
+  }
+}
+
 @media only screen and (max-width: 1200px){
   #litec_bg{
     background-size: 1200px 789px;
@@ -293,6 +328,33 @@ h4{
   }
   h3{
     font-size: 32px;
+  }
+  #gondola{
+    padding: 4% 0 9% 0;
+  }
+  #smart-car-contents{
+    background-position-y: 0;
+    padding: 1% 0 1% 0;
+    background-color: rgb(220,210,183);
+  }
+}
+
+@media only screen and (max-width: 1100px){
+  #smart-car-contents{
+    background-position: center top;
+    background-image: url("../Images/litec/litecContent-Mobile.jpg");
+    padding: 60% 6% 2% 6%;
+    background-color: rgb(220,210,184);
+    #text{
+      width: 88%;
+      margin-left: 6%;
+    }
+  }
+}
+
+@media only screen and (max-width: 1050px){
+  #gondola{
+    padding: 1% 0 1% 0;
   }
 }
 
@@ -337,6 +399,19 @@ h4{
   }
 }
 
+@media only screen and (max-width: 920px){
+  #gondola{
+    background-position: center top;
+    background-image: url("../Images/litec/gondola2-Mobile.jpg");
+    padding: 80% 6% 6% 6%;
+    background-color: rgb(220,216,207);
+    #text-gondola{
+      width: 88%;
+      margin-left: 6%;
+    }
+  }
+}
+
 @media only screen and (max-width: 800px){
   #features{
     #ft-wrapper{
@@ -377,6 +452,7 @@ h4{
       }
     }
   }
+  #gondola-intro h1{  color: black; }
 }
 
 @media only screen and (max-width: 605px){
@@ -432,4 +508,19 @@ h4{
   h4{
     font-size: 17px;
   }
+  #gondola{
+    padding: 80% 2.5% 6% 2.5%;
+    #text-gondola{
+      width: 92%;
+      margin-left: 4%;
+    }
+  }
+  #smart-car-contents{
+    padding: 60% 2.5% 2% 2.5%;
+    #text{
+      width: 92%;
+      margin-left: 4%;
+    }
+  }
 }
+@media only screen and (max-width: 290px ) { #gondola-intro h2{  color: black;  } }
