--- a/CSS/styles2.css
+++ b/CSS/styles2.css
@@ -185,8 +185,9 @@ body {
 
 #yt {
     padding: 22% 0;
-    background-image: url("../Images/youtube_pattern-690x262.png");
-    background-position: 50% 18%;
+    background-image: url("../Images/litecIndexBg.jpg");
+    background-position-y: -20px;
+    background-size: 120%;
     text-align: center;
     margin-right: 5px;
     transition: all 0.3s ease-in-out;
