--- a/Sass/beatslytics_styles.css
+++ b/Sass/beatslytics_styles.css
@@ -71,4 +71,24 @@
   display: block;
   margin: 0 auto; }
 
+@media only screen and (max-width: 1000px) {
+  #beatslytics-contents {
+    padding: 3% 15%; } }
+@media only screen and (max-width: 600px) {
+  #beatslytics-contents {
+    padding: 3% 10%; }
+
+  #title {
+    padding: 4% 20%; } }
+@media only screen and (max-width: 470px) {
+  .center_img img {
+    width: 200px;
+    height: 200px; } }
+@media only screen and (max-width: 400px) {
+  #beatslytics-contents {
+    padding: 3% 10%; }
+
+  #title {
+    padding: 4% 10%; } }
+
 /*# sourceMappingURL=beatslytics_styles.css.map */
