--- a/Sass/beatslytics_styles.css
+++ b/Sass/beatslytics_styles.css
@@ -71,6 +71,11 @@
   display: block;
   margin: 0 auto; }
 
+#appStore {
+  transition: all linear 0.15s; }
+  #appStore:hover {
+    box-shadow: 6px 6px 10px #888888; }
+
 @media only screen and (max-width: 1000px) {
   #beatslytics-contents {
     padding: 3% 15%; } }
@@ -81,7 +86,7 @@
   #title {
     padding: 4% 20%; } }
 @media only screen and (max-width: 470px) {
-  .center_img img {
+  #beatslytics-logo {
     width: 200px;
     height: 200px; } }
 @media only screen and (max-width: 400px) {
