--- a/Sass/beatslytics_styles.scss
+++ b/Sass/beatslytics_styles.scss
@@ -82,6 +82,13 @@
   margin: 0 auto;
 }
 
+#appStore{
+  transition: all linear 0.15s;
+  &:hover{
+    box-shadow: 6px 6px 10px #888888;
+  }
+}
+
 @media only screen and (max-width: 1000px){
   #beatslytics-contents{
     padding: 3% 15%;
@@ -98,7 +105,7 @@
 }
 
 @media only screen and (max-width:  470px){
-  .center_img img{
+  #beatslytics-logo {
     width: 200px;
     height: 200px;
   }
