--- a/Sass/app_folio_styles.css
+++ b/Sass/app_folio_styles.css
@@ -1,137 +1,197 @@
 .anchor-tag-alignment {
-  text-align: center; }
+  text-align: center;
+}
 
 body {
-  background-color: black; }
+  background-color: black;
+}
 
 .app {
-  margin-bottom: 15%; }
-  .app h2 {
-    text-align: center;
-    font-size: 35px;
-    font-family: Mohave, sans-serif;
-    color: white; }
-  .app img {
-    display: block;
-    margin: 0 auto; }
+  margin-bottom: 15%;
+}
+.app h2 {
+  text-align: center;
+  font-size: 35px;
+  font-family: Mohave, sans-serif;
+  color: white;
+}
+.app img {
+  display: block;
+  margin: 0 auto;
+}
 
 p {
   font-size: 17px;
   font-family: Roboto, sans-serif;
   text-align: center;
-  color: #888888; }
+  color: #888888;
+}
 
 #appFolio_bg {
   padding: 20% 0;
   background-image: url("../Images/AppFolio/AppFolioBg.svg");
   background-size: 100%;
-  background-position-y: 120%; }
+  background-position-y: 120%;
+}
 
 h1 {
   font-family: Roboto, sans-serif;
   color: white;
   text-align: center;
   background-position-y: 60%;
-  font-size: 45px; }
+  font-size: 45px;
+}
 
 .dual_columns {
   display: flex;
   padding: 0 15% 5% 15%;
-  background-size: 100% auto; }
-  .dual_columns a {
-    text-decoration: none;
-    font-family: -apple-system, BlinkMacSystemFont, Roboto, sans-serif;
-    font-size: 20px; }
-    .dual_columns a:link, .dual_columns a:visited {
-      color: white; }
-    .dual_columns a:hover {
-      color: white;
-      text-decoration: underline; }
-  .dual_columns .col1 {
-    width: 80%;
-    margin-right: 15%; }
-  .dual_columns .col2 {
-    width: 80%; }
+  background-size: 100% auto;
+}
+.dual_columns a {
+  text-decoration: none;
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, sans-serif;
+  font-size: 20px;
+}
+.dual_columns a:link, .dual_columns a:visited {
+  color: white;
+}
+.dual_columns a:hover {
+  color: white;
+  text-decoration: underline;
+}
+.dual_columns .col1 {
+  width: 80%;
+  margin-right: 15%;
+}
+.dual_columns .col2 {
+  width: 80%;
+}
 
 #modmed {
-  padding: 0 20%; }
+  padding: 0 20%;
+}
+
+#dk {
+  padding: 0 20%;
+}
 
 .experience-style {
   margin-top: 4%;
-  display: flex; }
-  .experience-style div {
-    padding: 0 3%;
-    display: block;
-    text-align: left; }
-  .experience-style h2 {
-    margin-top: 0.5%;
-    color: white;
-    font-family: Mohave, serif; }
-  .experience-style h3 {
-    margin-top: -1%;
-    color: #888888;
-    font-family: RobotoReg, serif; }
-  .experience-style h4 {
-    margin-top: -1%;
-    color: #888888;
-    font-family: Roboto, sans-serif; }
+  display: flex;
+}
+.experience-style div {
+  padding: 0 3%;
+  display: block;
+  text-align: left;
+}
+.experience-style h2 {
+  margin-top: 0.5%;
+  color: white;
+  font-family: Mohave, serif;
+}
+.experience-style h3 {
+  margin-top: -1%;
+  color: #888888;
+  font-family: RobotoReg, serif;
+}
+.experience-style h4 {
+  margin-top: -1%;
+  color: #888888;
+  font-family: Roboto, sans-serif;
+}
 
 @media only screen and (max-width: 1200px) {
   .dual_columns {
-    padding: 0 10% 5% 10%; }
-    .dual_columns .col1 {
-      margin-right: 10%; } }
+    padding: 0 10% 5% 10%;
+  }
+  .dual_columns .col1 {
+    margin-right: 10%;
+  }
+}
 @media only screen and (max-width: 1000px) {
   .dual_columns {
-    padding: 0 5% 2% 5%; }
-    .dual_columns .col1 {
-      margin-right: 5%; }
+    padding: 0 5% 2% 5%;
+  }
+  .dual_columns .col1 {
+    margin-right: 5%;
+  }
 
   #modmed {
-    padding: 0 15%; } }
+    padding: 0 15%;
+  }
+
+  #dk {
+    padding: 0 15%;
+  }
+}
 @media only screen and (max-width: 900px) {
   .dual_columns {
     padding: 0 15% 5% 15%;
-    display: block; }
-    .dual_columns .col1 {
-      width: 100%;
-      margin-right: 0; }
-    .dual_columns .col2 {
-      width: 100%; }
+    display: block;
+  }
+  .dual_columns .col1 {
+    width: 100%;
+    margin-right: 0;
+  }
+  .dual_columns .col2 {
+    width: 100%;
+  }
 
   .app img {
-    display: initial; }
+    display: initial;
+  }
 
   h1, h2, p {
-    text-align: left; }
+    text-align: left;
+  }
 
   h1 {
-    font-size: 35px; }
+    font-size: 35px;
+  }
 
   .app h2 {
-    text-align: left; }
+    text-align: left;
+  }
 
   .title {
-    padding: 0 15% 5% 15%; }
+    padding: 0 15% 5% 15%;
+  }
 
   .anchor-tag-alignment {
-    text-align: left; }
+    text-align: left;
+  }
 
   .experience-style {
-    display: block; }
-    .experience-style div {
-      padding: 0 0; }
+    display: block;
+  }
+  .experience-style div {
+    padding: 0 0;
+  }
 
   #modmed {
-    padding: 0 15%; } }
+    padding: 0 15%;
+  }
+
+  #dk {
+    padding: 0 15%;
+  }
+}
 @media only screen and (max-width: 650px) {
   .dual_columns {
-    padding: 0 10% 5% 10%; }
+    padding: 0 10% 5% 10%;
+  }
 
   .title {
-    padding: 0 10% 5% 10%; }
+    padding: 0 10% 5% 10%;
+  }
 
   #modmed {
-    padding: 0 10%; } }
+    padding: 0 10%;
+  }
+
+  #dk {
+    padding: 0 10%;
+  }
+}
 
 /*# sourceMappingURL=app_folio_styles.css.map */
