--- a/CSS/common.css
+++ b/CSS/common.css
@@ -151,7 +151,11 @@ body {
 
 #navicon {
     cursor: pointer;
-    filter: invert();
+    -webkit-filter: invert(100%);
+    -moz-filter: invert(100%);
+    -ms-filter: invert(100%);
+    -o-filter: invert(100%);
+    filter: invert(100%);
 }
 
 #mobile_logo img, #personal_logo img{
