--- a/CSS/footer_light.css
+++ b/CSS/footer_light.css
@@ -22,21 +22,22 @@
     to {transform: scale(1.0);}
 }
 
-#personal_logo{
+#personal_logo {
+    filter: invert();
     animation: bounce-leave 0.5s ;
     animation-fill-mode: forwards;
     -webkit-animation: bounce-leave 0.5s ;
     -webkit-animation-fill-mode: forwards;
 }
 
-#personal_logo:hover{
+#personal_logo:hover {
     animation: bounce 0.5s ;
     animation-fill-mode: forwards;
     -webkit-animation: bounce 0.5s ;
     -webkit-animation-fill-mode: forwards;
 }
 
-#standalone_footer{
+#standalone_footer {
     color: white;
 }
 
@@ -45,7 +46,7 @@
 }
 
 /*4 THE FOOTER*/
-#footerx{
+#footerx {
     display: flex;
     margin-top: 2%;
     width:70%;
@@ -60,11 +61,11 @@
 }
 
 /*h4 must be a direct descendant of footer */
-#standalone_footer{
+#standalone_footer {
     font-family: Roboto;
 }
 
-#footer_container{
+#footer_container {
     background-color: transparent;
     display: flex;
     margin-bottom: 0;
@@ -75,25 +76,25 @@
     display: flex;
 }
 
-#personal_logo{
+#personal_logo {
     margin-top: 20px;
     width: 20%;
 }
 
-#social_media_footer{
+#social_media_footer {
     width: 50%;
 }
 
-#projects_footer{
+#projects_footer {
     width: 50%;
 }
 
-#navigation{
+#navigation {
     width: 50%;
     display: inline;
 }
 
-#graphics_footer{
+#graphics_footer {
     width: 50%;
 }
 
@@ -101,7 +102,7 @@
     list-style: none;
 }
 
-#personal_logo img{
+#personal_logo img {
     /*margin-top: 2%;*/
     display: block;
     margin: 0 auto;
@@ -117,7 +118,7 @@
     font-family: Roboto;
 }
 
-#footerx a:hover{
+#footerx a:hover {
     transition: all 0.1s ease-in-out;
     color: orange;
 }
